examples/test/testpolicy9771.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9771
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key2: value34
      key1: value49
      key17: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value26
          key38: value2
      podSelector:
        matchLabels:
          key49: value29
          key2: value3
